# do_hoa_may

./: ANIMATION_DOC.md  ASSIMP_GUIDE.md  CAMERA_FIX.md  FINAL_IMPROVEMENTS.md  FIX_FACING_RALLY.md  GRAPHICS_UPGRADE_PLAN.md  GRAPHICS_UPGRADE_RESULTS.md  GraphicsUtils.h  GraphicsUtils_v2.h  HOW_TO_RUN.md  INSTALL_ASSIMP.bat  INSTALL_NOW.bat  INTEGRATION_SUCCESS.md  LIGHTING_FIX.md  ModelLoader.cpp  ModelLoader.h  NANG_CAP.md  PADDLE_MOVEMENT.md  QUICK_REFERENCE.txt  QUICK_START.md  README.md  README_ASSIMP.md  RUN_GAME.bat  SETUP_GUIDE.md  START_HERE.md  SUA_DOI.md  TEST_WITH_DEMO_MODEL.txt  arch_gate_temp.cpp  auto_install.ps1  compile.bat  compile_test.bat  compile_with_assimp.bat  example_usage.cpp  pickleball_scene.cpp  quick_install.ps1  test_model_loader.cpp
models/: README.md
modern_renderer/: CMakeLists.txt  COMPLETE_SUMMARY.md  ModernRenderer.cpp  ModernRenderer.h  QUICK_REFERENCE.txt  README.md  Shader.h  example_modern_renderer.cpp
modern_renderer/shaders/: blinn_phong.frag  blinn_phong.vert  shadow_map.frag  shadow_map.vert  skybox.frag  skybox.vert
